добавлены функции управления серверами

--- a/WebServer/FAQ.html
+++ b/WebServer/FAQ.html
@@ -3,7 +3,29 @@
 <HEAD>
 	<meta http-equiv="Content-Type" content="text/html: charset=utf-8">
 	<link rel ="stylesheet" href="style.css">
-
+  <style type = "text/css">
+p.speech_left {
+  position: relative;
+  text-align: center;
+  padding: 10px;
+  margin-right: 55%;
+  margin-left: 5%;
+  background-color: #FAE996;
+  border-radius: 30px;
+}
+p.speech_right {
+  position: relative;
+  text-align: center;
+  padding: 10px;
+  margin-left: 55%;
+  margin-right: 5%;
+  background-color: #1AC5DB;
+  border-radius: 30px;
+}
+    p2{
+      text-align: right;
+    }
+  </style>
 
 </HEAD>
 <body>
@@ -27,7 +49,16 @@
     </li>
   </ul>
 </nav>
-
+<p class="speech_right">Какое максимальное количество операторов поддерживает система?</p>
+<p class="speech_left">Количество зарегистрированных операторов в системе зависит от объёма файлового пространства, доступного СУБД. Но этот предел настолько большой, что вряд ли стоит беспокоиться о том, что он когда-либо в течение жизненного цикла нашей системы будет достигнут.</p>
+<p class="speech_right">Сервера каких вендоров (производителей) поддерживаются вашей системой?</p>
+<p class="speech_left">Наша система не работает напрямую со спецификациями IPMI. Она инкапсулирована от неё, и взаимодействует с серверами посредством отдельного узла, называемого IPMI-сервер, который транслирует команды нашей системы в запросы IPMI на конечные сервера. Соответственно, какая именно спецификация IPMI будет настроена на этом IPMI-сервере, с такими конечными серверами он и сможет взаимодействовать.</p>
+<p class="speech_right">Кто может создавать пользователей? Как вообще происходит регистрация в системе?</p>
+<p class="speech_left">Новых операторов в систему может добавлять администратор. Он же имеет привилегии удалять учётные записи операторов. При устройстве на вакансию оператора делается запрос администратору, в котором указываются учётные данные нового оператора – электронная почта, телефон и др. После этого администратор со своей учётной записи добавляет в систему нового оператора с данными, которые присуствовали в заявке. После создания учётной записи оператор сразу же может войти под ней в систему.</p>
+<p class="speech_right">А как тогда добавляются новые администраторы? Существует ли ещё более привилегированная категория пользователей?</p>
+<p class="speech_left">Учётные записи администраторов являются самыми привилегированными в системе. При этом администраторы не имеют права создавать или удалять администраторов. Добавление либо удаление учётных записей администраторов из системы происходит через файл конфигурации на сервере. Наша система периодически просматривает файл, и если в нём обнаруживается новая учётная запись – она добавляется в систему. Если обнаруживается, что какая-то учётная запись была удалена из файла конфигурации, то она пропадает и из системы.</p>
+<p class="speech_right">Каким образом организуется доступ к серверам операторами?</p>
+<p class="speech_left">Каждый сервер может быть либо общедоступным, либо быть назначенным на конкретного оператора. При этом другой оператор не может получить доступ не к своему серверу, за исключением общедоступных серверов. Тем не менее, у администраторов есть доступ ко всем серверам в системе, вне зависимости от того, к какому оператору они назначены. </p>
 
 
 </body>
