--- a/WebServer/contact.html
+++ b/WebServer/contact.html
@@ -52,34 +52,34 @@ img.avatar {
 
 <div class="user">
   <img src="PhotoAuth/avatar.webp " class="imgcontainer">
-  <p>ФИО: Илья Смиркин</p>
+  <p>ФИО: Илья Андреевич Смиркин</p>
   <p>Должность: Руководитель проекта, разработчик</p>
-  <p>Контактный номер: </p>
-  <p>Почта: </p>
+  <p>Контактный номер: +7(462)743-12-23</p>
+  <p>Почта: example@mirea.ru</p>
 </div>
 
 <div class="user">
   <img src="PhotoAuth/avatar.webp " class="imgcontainer">
-  <p>ФИО: Коротков Денис Юрьевич</p>
+  <p>ФИО: Денис Юрьевич Коротков</p>
   <p>Должность: Разработчик, дизайнер</p>
-  <p>Контактный номер: +7(958)562-02-80</p>
-  <p>Почта: korotkov987@yandex.ru </p>
+  <p>Контактный номер: +7(958)562-19-88</p>
+  <p>Почта: example@mirea.ru </p>
 </div>
 
 <div class="user">
   <img src="PhotoAuth/avatar.webp " class="imgcontainer">
-  <p>ФИО: Владимир Бурдаев</p>
+  <p>ФИО: Владимир Олегович Бурдаев</p>
   <p>Должность: Технический писатель, аналитик</p>
-  <p>Контактный номер: </p>
-  <p>Почта: </p>
+  <p>Контактный номер: +7(495)254-62-12</p>
+  <p>Почта: example@mirea.ru</p>
 </div>
 
 <div class="user">
   <img src="PhotoAuth/avatar.webp " class="imgcontainer">
-  <p>ФИО: Семен Кузьмин</p>
+  <p>ФИО: Семен Яковлевич Кузьмин</p>
   <p>Должность: Тестировщик</p>
-  <p>Контактный номер: </p>
-  <p>Почта: </p>
+  <p>Контактный номер: +7(532)523-63-74</p>
+  <p>Почта: example@mirea.ru</p>
 </div>
 
 </body>
